Add CI/CD workflows, validation, and hreflang
Add GitHub Actions for deployment and PR validation: .github/workflows/deploy.yml deploys to Hostinger via rsync/SSH (with permission fixes and a smoke test) and .github/workflows/validate-pr.yml runs a Python validator and comments results on PRs. Introduce scripts/validate_deployment.py and requirements.txt for pre-deploy checks (hreflang, sitemap, GA4, internal links, EN/PT parity). Add .gitignore for sensitive/development files and deploy.sh.example (copy to deploy.sh and fill secrets). Update several HTML pages to include bidirectional hreflang tags and update CLAUDE.md with automation notes.

--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
   <meta name="language" content="English">
   <link rel="canonical" href="https://marlow.dev.br">
 
+  <!-- Hreflang Tags -->
+  <link rel="alternate" hreflang="en" href="https://marlow.dev.br/">
+  <link rel="alternate" hreflang="pt-BR" href="https://marlow.dev.br/pt/">
+  <link rel="alternate" hreflang="x-default" href="https://marlow.dev.br/">
+
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://marlow.dev.br">
