--- a/nomad/index.html
+++ b/nomad/index.html
@@ -20,6 +20,11 @@
   <meta name="robots" content="index, follow">
   <link rel="canonical" href="https://marlow.dev.br/nomad/">
 
+  <!-- Hreflang Tags -->
+  <link rel="alternate" hreflang="en" href="https://marlow.dev.br/nomad/">
+  <link rel="alternate" hreflang="pt-BR" href="https://marlow.dev.br/pt/nomad/">
+  <link rel="alternate" hreflang="x-default" href="https://marlow.dev.br/nomad/">
+
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="profile">
   <meta property="og:url" content="https://marlow.dev.br/nomad/">
