Replace 'RPA Tech Lead' with 'Software Engineering Lead'
Update site role/branding across the site: replace occurrences of “RPA Tech Lead” with “Software Engineering Lead” in HTML pages, blog posts (EN and PT), Jinja2 templates, nomad pages, and site.webmanifest. Also update related meta descriptions, Open Graph/Twitter titles, author bios, image alts, and structured data. Added a new README.md with project overview, stack, structure, and development instructions.

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
   </script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Marlow Sousa | RPA Tech Lead & Digital Nomad</title>
+  <title>Marlow Sousa | Software Engineering Lead & Digital Nomad</title>
 
   <!-- SEO Meta Tags -->
-  <meta name="description" content="Marlow Sousa - Remote-first RPA Tech Lead & Digital Nomad. Delivering R$10M+ in automation savings across 3 continents. Expert in UiPath, Python, AI agents, and Microsoft Copilot.">
+  <meta name="description" content="Marlow Sousa - Remote-first Software Engineering Lead & Digital Nomad. Delivering R$10M+ in automation savings across 3 continents. Expert in UiPath, Python, AI agents, and Microsoft Copilot.">
   <meta name="keywords" content="RPA, Robotic Process Automation, UiPath, AI, Digital Nomad, Remote Work, Tech Lead, Python, Microsoft Copilot, Automation, Location Independent">
   <meta name="author" content="Marlow Sousa">
   <meta name="robots" content="index, follow">
@@ -32,7 +32,7 @@
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://marlow.dev.br">
-  <meta property="og:title" content="Marlow Sousa | RPA Tech Lead & Digital Nomad">
+  <meta property="og:title" content="Marlow Sousa | Software Engineering Lead & Digital Nomad">
   <meta property="og:description" content="Remote-first Tech Lead delivering R$10M+ in automation savings across 3 continents. Building the future from anywhere.">
   <meta property="og:image" content="https://marlow.dev.br/og-image.png">
   <meta property="og:locale" content="en_US">
@@ -41,7 +41,7 @@
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:url" content="https://marlow.dev.br">
-  <meta name="twitter:title" content="Marlow Sousa | RPA Tech Lead & Digital Nomad">
+  <meta name="twitter:title" content="Marlow Sousa | Software Engineering Lead & Digital Nomad">
   <meta name="twitter:description" content="Remote-first Tech Lead delivering R$10M+ in automation savings across 3 continents. Building the future from anywhere.">
   <meta name="twitter:image" content="https://marlow.dev.br/og-image.png">
   <meta name="twitter:creator" content="@marlowsousa">
@@ -1894,8 +1894,8 @@
     "familyName": "Sousa",
     "url": "https://marlow.dev.br",
     "image": "https://marlow.dev.br/og-image.png",
-    "jobTitle": "RPA Tech Lead",
-    "description": "Remote-first RPA Tech Lead & Digital Nomad delivering R$10M+ in automation savings across 3 continents. Expert in UiPath, Python, AI agents, and Microsoft Copilot.",
+    "jobTitle": "Software Engineering Lead",
+    "description": "Remote-first Software Engineering Lead & Digital Nomad delivering R$10M+ in automation savings across 3 continents. Expert in UiPath, Python, AI agents, and Microsoft Copilot.",
     "sameAs": [
       "https://linkedin.com/in/marlowsousa",
       "https://github.com/marlowsouza",
@@ -1947,7 +1947,7 @@
     "@id": "https://marlow.dev.br/#website",
     "url": "https://marlow.dev.br",
     "name": "Marlow Sousa Portfolio",
-    "description": "Portfolio and blog of Marlow Sousa - RPA Tech Lead & Digital Nomad",
+    "description": "Portfolio and blog of Marlow Sousa - Software Engineering Lead & Digital Nomad",
     "publisher": {
       "@id": "https://marlow.dev.br/#person"
     },
@@ -1996,7 +1996,7 @@
   <section class="hero">
     <canvas id="hero-particles" class="hero-particles"></canvas>
     <div class="hero-content">
-      <span class="hero-tag">RPA Tech Lead & Digital Nomad</span>
+      <span class="hero-tag">Software Engineering Lead & Digital Nomad</span>
       <h1>
         Building the Future
         <span>From Anywhere</span>
@@ -2518,12 +2518,12 @@
     <div class="about-grid">
       <div class="about-image">
         <div class="about-image-wrapper">
-          <img src="/assets/about.jpg" alt="Marlow Sousa - RPA Tech Lead" class="about-photo" loading="lazy" />
+          <img src="/assets/about.jpg" alt="Marlow Sousa - Software Engineering Lead" class="about-photo" loading="lazy" />
         </div>
       </div>
       <div class="about-content">
         <p class="about-text">
-          <strong>Mechanical Engineer</strong> turned <strong>RPA Tech Lead</strong> with 8+ years
+          <strong>Mechanical Engineer</strong> turned <strong>Software Engineering Lead</strong> with 8+ years
           transforming enterprise operations. Currently leading automation and AI initiatives at
           <strong>Omni Conectado</strong>, where I've delivered R$ 5M+ in savings through intelligent
           automation solutions.
