--- a/nomad/index.html
+++ b/nomad/index.html
@@ -58,7 +58,7 @@
     "@type": "Person",
     "name": "Marlow Sousa",
     "url": "https://marlow.dev.br",
-    "jobTitle": "RPA Tech Lead & Digital Nomad",
+    "jobTitle": "Software Engineering Lead & Digital Nomad",
     "description": "Remote-first Tech Lead and Digital Nomad working from 5+ countries across 3 continents, specializing in RPA and automation.",
     "knowsAbout": ["Digital Nomad Lifestyle", "Remote Work", "Location Independence", "RPA", "Automation", "UiPath", "Python"],
     "workLocation": {
