--- a/pt/index.html
+++ b/pt/index.html
@@ -16,10 +16,10 @@
   </script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Marlow Sousa | RPA Tech Lead & Nômade Digital</title>
+  <title>Marlow Sousa | Software Engineering Lead & Nômade Digital</title>
 
   <!-- SEO Meta Tags -->
-  <meta name="description" content="Marlow Sousa - RPA Tech Lead remoto & Nômade Digital. Entregando mais de R$10M em economia com automação em 3 continentes. Especialista em UiPath, Python, agentes de IA e Microsoft Copilot.">
+  <meta name="description" content="Marlow Sousa - Software Engineering Lead remoto & Nômade Digital. Entregando mais de R$10M em economia com automação em 3 continentes. Especialista em UiPath, Python, agentes de IA e Microsoft Copilot.">
   <meta name="keywords" content="RPA, Automação Robótica de Processos, UiPath, IA, Nômade Digital, Trabalho Remoto, Tech Lead, Python, Microsoft Copilot, Automação, Independência de Localização">
   <meta name="author" content="Marlow Sousa">
   <meta name="robots" content="index, follow">
@@ -34,7 +34,7 @@
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://marlow.dev.br/pt/">
-  <meta property="og:title" content="Marlow Sousa | RPA Tech Lead & Nômade Digital">
+  <meta property="og:title" content="Marlow Sousa | Software Engineering Lead & Nômade Digital">
   <meta property="og:description" content="Tech Lead remoto entregando mais de R$10M em economia com automação em 3 continentes. Construindo o futuro de qualquer lugar.">
   <meta property="og:image" content="https://marlow.dev.br/og-image.png">
   <meta property="og:locale" content="pt_BR">
@@ -43,7 +43,7 @@
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:url" content="https://marlow.dev.br/pt/">
-  <meta name="twitter:title" content="Marlow Sousa | RPA Tech Lead & Nômade Digital">
+  <meta name="twitter:title" content="Marlow Sousa | Software Engineering Lead & Nômade Digital">
   <meta name="twitter:description" content="Tech Lead remoto entregando mais de R$10M em economia com automação em 3 continentes. Construindo o futuro de qualquer lugar.">
   <meta name="twitter:image" content="https://marlow.dev.br/og-image.png">
   <meta name="twitter:creator" content="@marlowsousa">
@@ -1893,8 +1893,8 @@
     "familyName": "Sousa",
     "url": "https://marlow.dev.br/pt/",
     "image": "https://marlow.dev.br/og-image.png",
-    "jobTitle": "RPA Tech Lead",
-    "description": "RPA Tech Lead remoto & Nômade Digital entregando mais de R$10M em economia com automação em 3 continentes. Especialista em UiPath, Python, agentes de IA e Microsoft Copilot.",
+    "jobTitle": "Software Engineering Lead",
+    "description": "Software Engineering Lead remoto & Nômade Digital entregando mais de R$10M em economia com automação em 3 continentes. Especialista em UiPath, Python, agentes de IA e Microsoft Copilot.",
     "sameAs": [
       "https://linkedin.com/in/marlowsousa",
       "https://github.com/marlowsouza",
@@ -1946,7 +1946,7 @@
     "@id": "https://marlow.dev.br/#website",
     "url": "https://marlow.dev.br",
     "name": "Marlow Sousa Portfolio",
-    "description": "Portfolio and blog of Marlow Sousa - RPA Tech Lead & Digital Nomad",
+    "description": "Portfolio and blog of Marlow Sousa - Software Engineering Lead & Digital Nomad",
     "publisher": {
       "@id": "https://marlow.dev.br/#person"
     },
@@ -1995,7 +1995,7 @@
   <section class="hero">
     <canvas id="hero-particles" class="hero-particles"></canvas>
     <div class="hero-content">
-      <span class="hero-tag">RPA Tech Lead & Nômade Digital</span>
+      <span class="hero-tag">Software Engineering Lead & Nômade Digital</span>
       <h1>
         Construindo o Futuro
         <span>De Qualquer Lugar</span>
@@ -2517,12 +2517,12 @@
     <div class="about-grid">
       <div class="about-image">
         <div class="about-image-wrapper">
-          <img src="/assets/about.jpg" alt="Marlow Sousa - RPA Tech Lead" class="about-photo" loading="lazy" />
+          <img src="/assets/about.jpg" alt="Marlow Sousa - Software Engineering Lead" class="about-photo" loading="lazy" />
         </div>
       </div>
       <div class="about-content">
         <p class="about-text">
-          <strong>Engenheiro Mecânico</strong> que se tornou <strong>RPA Tech Lead</strong> com 8+ anos
+          <strong>Engenheiro Mecânico</strong> que se tornou <strong>Software Engineering Lead</strong> com 8+ anos
           transformando operações empresariais. Atualmente liderando iniciativas de automação e IA na
           <strong>Omni Conectado</strong>, onde entreguei mais de R$ 5M em economia através de soluções
           inteligentes de automação.
