--- a/pt/nomad/index.html
+++ b/pt/nomad/index.html
@@ -60,7 +60,7 @@
     "@type": "Person",
     "name": "Marlow Sousa",
     "url": "https://marlow.dev.br",
-    "jobTitle": "RPA Tech Lead & Nomade Digital",
+    "jobTitle": "Software Engineering Lead & Nomade Digital",
     "description": "Tech Lead remoto e Nomade Digital trabalhando de mais de 5 paises em 3 continentes, especializado em RPA e automacao.",
     "knowsAbout": ["Estilo de Vida Nomade Digital", "Trabalho Remoto", "Independencia de Localizacao", "RPA", "Automacao", "UiPath", "Python"],
     "workLocation": {
