Update blog cards, dates, links, and button styles
Add rounded button style and replace WhatsApp icon with an outlined/stroked SVG. Update multiple blog-card entries on the homepage and Portuguese pages: adjust categories, dates, titles, excerpts, read times, links, and some image SVG paths to reflect new post ordering and the "Building the Future" program. Changes are mirrored in pt/ localized pages.

--- a/index.html
+++ b/index.html
@@ -2411,13 +2411,42 @@
       <article class="blog-card">
         <div class="blog-card-image">
           <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="1.5">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M12 21a9.004 9.004 0 008.716-6.747M12 21a9.004 9.004 0 01-8.716-6.747M12 21c2.485 0 4.5-4.03 4.5-9S14.485 3 12 3m0 18c-2.485 0-4.5-4.03-4.5-9S9.515 3 12 3m0 0a8.997 8.997 0 017.843 4.582M12 3a8.997 8.997 0 00-7.843 4.582m15.686 0A11.953 11.953 0 0112 10.5c-2.998 0-5.74-1.1-7.843-2.918m15.686 0A8.959 8.959 0 0121 12c0 .778-.099 1.533-.284 2.253m0 0A17.919 17.919 0 0112 16.5c-3.162 0-6.133-.815-8.716-2.247m0 0A9.015 9.015 0 013 12c0-1.605.42-3.113 1.157-4.418" />
+          </svg>
+        </div>
+        <div class="blog-card-content">
+          <div class="blog-card-meta">
+            <span class="blog-card-category">Responsible AI</span>
+            <span class="blog-card-date">Feb 2026</span>
+          </div>
+          <h3 class="blog-card-title">Building the Future: One Business at a Time</h3>
+          <p class="blog-card-excerpt">We digitize one independent business per month for free — professional website or iOS app, domain, and hosting for 3 years.</p>
+          <div class="blog-card-footer">
+            <span class="blog-card-read-time">
+              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M12 6v6h4.5m4.5 0a9 9 0 11-18 0 9 9 0 0118 0z" />
+              </svg>
+              7 min read
+            </span>
+            <a href="/blog/building-the-future-program.html" class="blog-card-link">
+              Read More
+              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M17 8l4 4m0 0l-4 4m4-4H3" />
+              </svg>
+            </a>
+          </div>
+        </div>
+      </article>
+      <article class="blog-card">
+        <div class="blog-card-image">
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="1.5">
             <path stroke-linecap="round" stroke-linejoin="round" d="M9.813 15.904L9 18.75l-.813-2.846a4.5 4.5 0 00-3.09-3.09L2.25 12l2.846-.813a4.5 4.5 0 003.09-3.09L9 5.25l.813 2.846a4.5 4.5 0 003.09 3.09L15.75 12l-2.846.813a4.5 4.5 0 00-3.09 3.09zM18.259 8.715L18 9.75l-.259-1.035a3.375 3.375 0 00-2.455-2.456L14.25 6l1.036-.259a3.375 3.375 0 002.455-2.456L18 2.25l.259 1.035a3.375 3.375 0 002.456 2.456L21.75 6l-1.035.259a3.375 3.375 0 00-2.456 2.456z" />
           </svg>
         </div>
         <div class="blog-card-content">
           <div class="blog-card-meta">
             <span class="blog-card-category">AI Agents</span>
-            <span class="blog-card-date">Dec 2024</span>
+            <span class="blog-card-date">Jan 2026</span>
           </div>
           <h3 class="blog-card-title">Building Enterprise AI Agents with Microsoft Copilot Studio</h3>
           <p class="blog-card-excerpt">How we deployed 5+ AI agents that understand context, integrate with JIRA, and automate complex decision workflows.</p>
@@ -2446,7 +2475,7 @@
         <div class="blog-card-content">
           <div class="blog-card-meta">
             <span class="blog-card-category">RPA</span>
-            <span class="blog-card-date">Nov 2024</span>
+            <span class="blog-card-date">Jan 2026</span>
           </div>
           <h3 class="blog-card-title">From 60 Hours to 6: The UiPath Optimization Playbook</h3>
           <p class="blog-card-excerpt">Lessons learned from building 60+ automations that process 12k+ monthly requests while maintaining 99.5% accuracy.</p>
@@ -2458,35 +2487,6 @@
               12 min read
             </span>
             <a href="/blog/uipath-optimization-playbook.html" class="blog-card-link">
-              Read More
-              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-                <path stroke-linecap="round" stroke-linejoin="round" d="M17 8l4 4m0 0l-4 4m4-4H3" />
-              </svg>
-            </a>
-          </div>
-        </div>
-      </article>
-      <article class="blog-card">
-        <div class="blog-card-image">
-          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="1.5">
-            <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6A2.25 2.25 0 016 3.75h2.25A2.25 2.25 0 0110.5 6v2.25a2.25 2.25 0 01-2.25 2.25H6a2.25 2.25 0 01-2.25-2.25V6zM3.75 15.75A2.25 2.25 0 016 13.5h2.25a2.25 2.25 0 012.25 2.25V18a2.25 2.25 0 01-2.25 2.25H6A2.25 2.25 0 013.75 18v-2.25zM13.5 6a2.25 2.25 0 012.25-2.25H18A2.25 2.25 0 0120.25 6v2.25A2.25 2.25 0 0118 10.5h-2.25a2.25 2.25 0 01-2.25-2.25V6zM13.5 15.75a2.25 2.25 0 012.25-2.25H18a2.25 2.25 0 012.25 2.25V18A2.25 2.25 0 0118 20.25h-2.25A2.25 2.25 0 0113.5 18v-2.25z" />
-          </svg>
-        </div>
-        <div class="blog-card-content">
-          <div class="blog-card-meta">
-            <span class="blog-card-category">Process Design</span>
-            <span class="blog-card-date">Oct 2024</span>
-          </div>
-          <h3 class="blog-card-title">BPMN + Camunda: Designing Processes That Actually Scale</h3>
-          <p class="blog-card-excerpt">Why AS-IS/TO-BE mapping matters, and how proper process architecture prevents automation technical debt.</p>
-          <div class="blog-card-footer">
-            <span class="blog-card-read-time">
-              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-                <path stroke-linecap="round" stroke-linejoin="round" d="M12 6v6h4.5m4.5 0a9 9 0 11-18 0 9 9 0 0118 0z" />
-              </svg>
-              10 min read
-            </span>
-            <a href="/blog/bpmn-camunda-process-design.html" class="blog-card-link">
               Read More
               <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
                 <path stroke-linecap="round" stroke-linejoin="round" d="M17 8l4 4m0 0l-4 4m4-4H3" />
