--- a/pt/index.html
+++ b/pt/index.html
@@ -2410,13 +2410,42 @@
       <article class="blog-card">
         <div class="blog-card-image">
           <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="1.5">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M12 21a9.004 9.004 0 008.716-6.747M12 21a9.004 9.004 0 01-8.716-6.747M12 21c2.485 0 4.5-4.03 4.5-9S14.485 3 12 3m0 18c-2.485 0-4.5-4.03-4.5-9S9.515 3 12 3m0 0a8.997 8.997 0 017.843 4.582M12 3a8.997 8.997 0 00-7.843 4.582m15.686 0A11.953 11.953 0 0112 10.5c-2.998 0-5.74-1.1-7.843-2.918m15.686 0A8.959 8.959 0 0121 12c0 .778-.099 1.533-.284 2.253m0 0A17.919 17.919 0 0112 16.5c-3.162 0-6.133-.815-8.716-2.247m0 0A9.015 9.015 0 013 12c0-1.605.42-3.113 1.157-4.418" />
+          </svg>
+        </div>
+        <div class="blog-card-content">
+          <div class="blog-card-meta">
+            <span class="blog-card-category">IA Responsável</span>
+            <span class="blog-card-date">Fev 2026</span>
+          </div>
+          <h3 class="blog-card-title">Construindo o Futuro: Um Negócio de Cada Vez</h3>
+          <p class="blog-card-excerpt">Digitalizamos um negócio independente por mês, de graça — site profissional ou app iOS, domínio e hospedagem por 3 anos.</p>
+          <div class="blog-card-footer">
+            <span class="blog-card-read-time">
+              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M12 6v6h4.5m4.5 0a9 9 0 11-18 0 9 9 0 0118 0z" />
+              </svg>
+              7 min de leitura
+            </span>
+            <a href="/pt/blog/building-the-future-program.html" class="blog-card-link">
+              Leia Mais
+              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M17 8l4 4m0 0l-4 4m4-4H3" />
+              </svg>
+            </a>
+          </div>
+        </div>
+      </article>
+      <article class="blog-card">
+        <div class="blog-card-image">
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="1.5">
             <path stroke-linecap="round" stroke-linejoin="round" d="M9.813 15.904L9 18.75l-.813-2.846a4.5 4.5 0 00-3.09-3.09L2.25 12l2.846-.813a4.5 4.5 0 003.09-3.09L9 5.25l.813 2.846a4.5 4.5 0 003.09 3.09L15.75 12l-2.846.813a4.5 4.5 0 00-3.09 3.09zM18.259 8.715L18 9.75l-.259-1.035a3.375 3.375 0 00-2.455-2.456L14.25 6l1.036-.259a3.375 3.375 0 002.455-2.456L18 2.25l.259 1.035a3.375 3.375 0 002.456 2.456L21.75 6l-1.035.259a3.375 3.375 0 00-2.456 2.456z" />
           </svg>
         </div>
         <div class="blog-card-content">
           <div class="blog-card-meta">
             <span class="blog-card-category">Agentes de IA</span>
-            <span class="blog-card-date">Dez 2024</span>
+            <span class="blog-card-date">Jan 2026</span>
           </div>
           <h3 class="blog-card-title">Construindo Agentes de IA Empresariais com Microsoft Copilot Studio</h3>
           <p class="blog-card-excerpt">Como implantamos 5+ agentes de IA que entendem contexto, integram com JIRA e automatizam fluxos de decisão complexos.</p>
@@ -2445,7 +2474,7 @@
         <div class="blog-card-content">
           <div class="blog-card-meta">
             <span class="blog-card-category">RPA</span>
-            <span class="blog-card-date">Nov 2024</span>
+            <span class="blog-card-date">Jan 2026</span>
           </div>
           <h3 class="blog-card-title">De 60 Horas para 6: O Guia de Otimização UiPath</h3>
           <p class="blog-card-excerpt">Lições aprendidas construindo 60+ automações que processam 12k+ requisições mensais mantendo 99.5% de precisão.</p>
@@ -2457,35 +2486,6 @@
               12 min de leitura
             </span>
             <a href="/pt/blog/uipath-optimization-playbook.html" class="blog-card-link">
-              Leia Mais
-              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-                <path stroke-linecap="round" stroke-linejoin="round" d="M17 8l4 4m0 0l-4 4m4-4H3" />
-              </svg>
-            </a>
-          </div>
-        </div>
-      </article>
-      <article class="blog-card">
-        <div class="blog-card-image">
-          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="1.5">
-            <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6A2.25 2.25 0 016 3.75h2.25A2.25 2.25 0 0110.5 6v2.25a2.25 2.25 0 01-2.25 2.25H6a2.25 2.25 0 01-2.25-2.25V6zM3.75 15.75A2.25 2.25 0 016 13.5h2.25a2.25 2.25 0 012.25 2.25V18a2.25 2.25 0 01-2.25 2.25H6A2.25 2.25 0 013.75 18v-2.25zM13.5 6a2.25 2.25 0 012.25-2.25H18A2.25 2.25 0 0120.25 6v2.25A2.25 2.25 0 0118 10.5h-2.25a2.25 2.25 0 01-2.25-2.25V6zM13.5 15.75a2.25 2.25 0 012.25-2.25H18a2.25 2.25 0 012.25 2.25V18A2.25 2.25 0 0118 20.25h-2.25A2.25 2.25 0 0113.5 18v-2.25z" />
-          </svg>
-        </div>
-        <div class="blog-card-content">
-          <div class="blog-card-meta">
-            <span class="blog-card-category">Design de Processos</span>
-            <span class="blog-card-date">Out 2024</span>
-          </div>
-          <h3 class="blog-card-title">BPMN + Camunda: Projetando Processos que Realmente Escalam</h3>
-          <p class="blog-card-excerpt">Por que o mapeamento AS-IS/TO-BE importa e como uma arquitetura de processos adequada previne dívida técnica.</p>
-          <div class="blog-card-footer">
-            <span class="blog-card-read-time">
-              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-                <path stroke-linecap="round" stroke-linejoin="round" d="M12 6v6h4.5m4.5 0a9 9 0 11-18 0 9 9 0 0118 0z" />
-              </svg>
-              10 min de leitura
-            </span>
-            <a href="/pt/blog/bpmn-camunda-process-design.html" class="blog-card-link">
               Leia Mais
               <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
                 <path stroke-linecap="round" stroke-linejoin="round" d="M17 8l4 4m0 0l-4 4m4-4H3" />
